Set ids to strings and fixed test on line 197