@@ -1,10 +1,6 @@
 package com.example.LiveChattingApp.service;
 
-import com.example.LiveChattingApp.friendship.DTOs.FriendshipResponseDTO;
-import com.example.LiveChattingApp.friendship.Friendship;
-import com.example.LiveChattingApp.friendship.FriendshipRepository;
-import com.example.LiveChattingApp.friendship.FriendshipService;
-import com.example.LiveChattingApp.friendship.FriendshipStatus;
+import com.example.LiveChattingApp.friendship.*;
 import com.example.LiveChattingApp.friendship.exceptions.FriendshipNotFoundException;
 import com.example.LiveChattingApp.user.User;
 import com.example.LiveChattingApp.user.UserRepository;
@@ -17,14 +13,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @Testcontainers
@@ -61,7 +59,7 @@ public class FriendshipServiceTest {
       .createdDate(testTime)
       .build();
 
-    user1.setId(1);
+    user1.setId("1");
 
     user2 = User.builder()
       .firstname("Vlad")
@@ -74,7 +72,7 @@ public class FriendshipServiceTest {
       .enabled(true)
       .createdDate(testTime)
       .build();
-    user2.setId(2);
+    user2.setId("2");
 
     user3 = User.builder()
       .firstname("Matei")
@@ -87,10 +85,10 @@ public class FriendshipServiceTest {
       .enabled(true)
       .createdDate(testTime)
       .build();
-    user3.setId(3);
+    user3.setId("3");
 
     friendship = new Friendship();
-    friendship.setId(1);
+    friendship.setId("1");
     friendship.setUser(user1);
     friendship.setFriend(user2);
     friendship.setFriendshipsStatus(FriendshipStatus.PENDING);
@@ -101,17 +99,17 @@ public class FriendshipServiceTest {
 
   @Test
   void testSendFriendRequestSuccess() {
-    when(userRepository.findById(1)).thenReturn(Optional.of(user1));
-    when(userRepository.findById(2)).thenReturn(Optional.of(user2));
-    when(friendshipRepository.existsFriendshipBetweenUsers(1, 2)).thenReturn(false);
+    when(userRepository.findById("1")).thenReturn(Optional.of(user1));
+    when(userRepository.findById("2")).thenReturn(Optional.of(user2));
+    when(friendshipRepository.existsFriendshipBetweenUsers("1", "2", FriendshipStatus.ACCEPTED)).thenReturn(false);
     when(friendshipRepository.save(any(Friendship.class))).thenReturn(friendship);
 
 
-    FriendshipResponseDTO result = friendshipService.sendFriendRequest(1, 2);
+    FriendshipResponseDTO result = friendshipService.sendFriendRequest("1", "2");
 
     assertThat(result).isNotNull();
-    assertThat(result.getId()).isEqualTo(1);
-    assertThat(result.getUserId()).isEqualTo(2);
+    assertThat(result.getId()).isEqualTo("1");
+    assertThat(result.getUserId()).isEqualTo("2");
     assertThat(result.getDisplayName()).isEqualTo("gtgmycatisonfire");
     assertThat(result.getEmail()).isEqualTo("vladloghin00@gmail.com");
     assertThat(result.getStatus()).isEqualTo("PENDING");
@@ -122,9 +120,9 @@ public class FriendshipServiceTest {
 
   @Test
   void testSendFriendRequest_throwsException() {
-    when(userRepository.findById(1)).thenReturn(Optional.of(user1));
+    when(userRepository.findById("1")).thenReturn(Optional.of(user1));
 
-    assertThatThrownBy(() -> friendshipService.sendFriendRequest(1, 1))
+    assertThatThrownBy(() -> friendshipService.sendFriendRequest("1", "1"))
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage("A user cannot send a friend request to themselves.");
 
@@ -134,9 +132,9 @@ public class FriendshipServiceTest {
 
   @Test
   void testSendFriendRequest_UserNotFound_ThrowsException() {
-    when(userRepository.findById(1)).thenReturn(Optional.empty());
+    when(userRepository.findById("1")).thenReturn(Optional.empty());
 
-    assertThatThrownBy(() -> friendshipService.sendFriendRequest(1, 2))
+    assertThatThrownBy(() -> friendshipService.sendFriendRequest("1", "2"))
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage("User not found with ID: 1");
 
@@ -145,10 +143,10 @@ public class FriendshipServiceTest {
 
   @Test
   void testAcceptFriendRequest_Success() {
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
     when(friendshipRepository.save(any(Friendship.class))).thenReturn(friendship);
 
-    FriendshipResponseDTO result = friendshipService.acceptFriendRequest(2, 1);
+    FriendshipResponseDTO result = friendshipService.acceptFriendRequest("2", "1");
 
     assertThat(result).isNotNull();
     assertThat(result.getStatus()).isEqualTo("ACCEPTED");
@@ -160,9 +158,9 @@ public class FriendshipServiceTest {
 
   @Test
   void testAcceptFriendRequest_IllegalArgumentException() {
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
 
-    assertThatThrownBy(() -> friendshipService.acceptFriendRequest(3, 1))
+    assertThatThrownBy(() -> friendshipService.acceptFriendRequest("3", "1"))
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage("You can only accept requests sent to you.");
 
@@ -173,9 +171,9 @@ public class FriendshipServiceTest {
   @Test
   void testAcceptFriendRequest_IllegalStateException() {
     friendship.setFriendshipsStatus(FriendshipStatus.ACCEPTED);
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
 
-    assertThatThrownBy(() -> friendshipService.acceptFriendRequest(2, 1))
+    assertThatThrownBy(() -> friendshipService.acceptFriendRequest("2", "1"))
       .isInstanceOf(IllegalStateException.class)
       .hasMessage("You can only accept pending requests.");
 
@@ -185,10 +183,10 @@ public class FriendshipServiceTest {
 
   @Test
   void testRejectFriendRequest() {
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
     when(friendshipRepository.save(any(Friendship.class))).thenReturn(friendship);
 
-    assertThatCode(() -> friendshipService.rejectFriendRequest(2, 1))
+    assertThatCode(() -> friendshipService.rejectFriendRequest("2", "1"))
       .doesNotThrowAnyException();
 
     verify(friendshipRepository).save(argThat(f -> f.getFriendshipsStatus() == FriendshipStatus.REJECTED));
@@ -196,9 +194,9 @@ public class FriendshipServiceTest {
 
   @Test
   void testRejectFriendRequest_IllegalArgumentException() {
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
 
-    assertThatThrownBy(() -> friendshipService.rejectFriendRequest(3, 1))
+    assertThatThrownBy(() -> friendshipService.rejectFriendRequest("3", "1"))
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage("You can only reject requests sent to you.");
 
@@ -208,10 +206,10 @@ public class FriendshipServiceTest {
 
   @Test
   void testRejectFriendRequest_IllegalStateException() {
-    when(friendshipRepository.findById(1)).thenReturn(Optional.of(friendship));
+    when(friendshipRepository.findById("1")).thenReturn(Optional.of(friendship));
     friendship.setFriendshipsStatus(FriendshipStatus.ACCEPTED);
 
-    assertThatThrownBy(() -> friendshipService.rejectFriendRequest(2, 1))
+    assertThatThrownBy(() -> friendshipService.rejectFriendRequest("2", "1"))
       .isInstanceOf(IllegalStateException.class)
       .hasMessage("You can only reject pending requests.");
 
@@ -220,10 +218,10 @@ public class FriendshipServiceTest {
 
   @Test
   void removeFriend_Success() {
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.of(friendship));
 
-    assertThatCode(() -> friendshipService.removeFriend(1, 2))
+    assertThatCode(() -> friendshipService.removeFriend("1", "2"))
       .doesNotThrowAnyException();
 
     verify(friendshipRepository).delete(friendship);
@@ -231,10 +229,10 @@ public class FriendshipServiceTest {
 
   @Test
   void removeFriend_FriendshipNotFound_ThrowsException() {
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.empty());
 
-    assertThatThrownBy(() -> friendshipService.removeFriend(1, 2))
+    assertThatThrownBy(() -> friendshipService.removeFriend("1", "2"))
       .isInstanceOf(FriendshipNotFoundException.class)
       .hasMessage("Friendship not found between these users");
 
@@ -243,12 +241,12 @@ public class FriendshipServiceTest {
 
   @Test
   void testBlockUser_ExistingFriendship_Success() {
-    when(userRepository.findById(2)).thenReturn(Optional.of(user2));
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(userRepository.findById("2")).thenReturn(Optional.of(user2));
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.of(friendship));
     when(friendshipRepository.save(any(Friendship.class))).thenReturn(friendship);
 
-    assertThatCode(() -> friendshipService.blockUser(1, 2))
+    assertThatCode(() -> friendshipService.blockUser("1", "2"))
       .doesNotThrowAnyException();
 
     verify(friendshipRepository).save(argThat(f ->
@@ -257,36 +255,36 @@ public class FriendshipServiceTest {
 
   @Test
   void testBlockUser_NoExistingFriendship_Success() {
-    when(userRepository.findById(2)).thenReturn(Optional.of(user2));
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(userRepository.findById("2")).thenReturn(Optional.of(user2));
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.empty());
     when(friendshipRepository.save(any(Friendship.class))).thenReturn(friendship);
 
-    assertThatCode(() -> friendshipService.blockUser(1, 2))
+    assertThatCode(() -> friendshipService.blockUser("1", "2"))
       .doesNotThrowAnyException();
 
     verify(friendshipRepository).save(argThat(f ->
       f.getFriendshipsStatus() == FriendshipStatus.BLOCKED &&
-        f.getFriend().getId().equals(2)));
+        f.getFriend().getId().equals("2")));
   }
 
 
   @Test
   void testGetFriends_Success() {
     Friendship acceptedFriendship = new Friendship();
-    acceptedFriendship.setId(1);
+    acceptedFriendship.setId("1");
     acceptedFriendship.setUser(user1);
     acceptedFriendship.setFriend(user2);
     acceptedFriendship.setFriendshipsStatus(FriendshipStatus.ACCEPTED);
     acceptedFriendship.setCreatedAt(testTime);
 
-    when(friendshipRepository.findAcceptedFriendships(1))
+    when(friendshipRepository.findAcceptedFriendships("1"))
       .thenReturn(List.of(acceptedFriendship));
 
-    List<FriendshipResponseDTO> result = friendshipService.getFriends(1);
+    List<FriendshipResponseDTO> result = friendshipService.getFriends("1");
 
     assertThat(result).hasSize(1);
-    assertThat(result.getFirst().getUserId()).isEqualTo(2);
+    assertThat(result.getFirst().getUserId()).isEqualTo("2");
     assertThat(result.getFirst().getDisplayName()).isEqualTo("gtgmycatisonfire");
     assertThat(result.getFirst().getStatus()).isEqualTo("ACCEPTED");
     assertThat(result.getFirst().isRequester()).isTrue();
@@ -294,13 +292,13 @@ public class FriendshipServiceTest {
 
   @Test
   void testGetReceivedPendingRequests_Success() {
-    when(friendshipRepository.findPendingReceivedRequests(2))
+    when(friendshipRepository.findPendingReceivedRequests("2"))
       .thenReturn(Collections.singletonList(friendship));
 
-    List<FriendshipResponseDTO> result = friendshipService.getReceivedPendingRequests(2);
+    List<FriendshipResponseDTO> result = friendshipService.getReceivedPendingRequests("2");
 
     assertThat(result).hasSize(1);
-    assertThat(result.getFirst().getUserId()).isEqualTo(1);
+    assertThat(result.getFirst().getUserId()).isEqualTo("1");
     assertThat(result.getFirst().getDisplayName()).isEqualTo("Jordan299");
     assertThat(result.getFirst().getStatus()).isEqualTo("PENDING");
     assertThat(result.getFirst().isRequester()).isFalse();
@@ -308,13 +306,13 @@ public class FriendshipServiceTest {
 
   @Test
   void testGetSentPendingRequests_Success() {
-    when(friendshipRepository.findPendingSentRequests(1))
+    when(friendshipRepository.findPendingSentRequests("1"))
       .thenReturn(Collections.singletonList(friendship));
 
-    List<FriendshipResponseDTO> result = friendshipService.getSentPendingRequests(1);
+    List<FriendshipResponseDTO> result = friendshipService.getSentPendingRequests("1");
 
     assertThat(result).hasSize(1);
-    assertThat(result.getFirst().getUserId()).isEqualTo(2);
+    assertThat(result.getFirst().getUserId()).isEqualTo("2");
     assertThat(result.getFirst().getDisplayName()).isEqualTo("gtgmycatisonfire");
     assertThat(result.getFirst().getStatus()).isEqualTo("PENDING");
     assertThat(result.getFirst().isRequester()).isTrue();
@@ -323,19 +321,19 @@ public class FriendshipServiceTest {
   @Test
   void testGetBlockedUsers_Success() {
     Friendship blockedFriendship = new Friendship();
-    blockedFriendship.setId(1);
+    blockedFriendship.setId("1");
     blockedFriendship.setUser(user1);
     blockedFriendship.setFriend(user2);
     blockedFriendship.setFriendshipsStatus(FriendshipStatus.BLOCKED);
     blockedFriendship.setCreatedAt(testTime);
 
-    when(friendshipRepository.findBlockedUsers(1))
+    when(friendshipRepository.findBlockedUsers("1"))
       .thenReturn(List.of(blockedFriendship));
 
-    List<FriendshipResponseDTO> result = friendshipService.getBlockedUsers(1);
+    List<FriendshipResponseDTO> result = friendshipService.getBlockedUsers("1");
 
     assertThat(result).hasSize(1);
-    assertThat(result.getFirst().getUserId()).isEqualTo(2);
+    assertThat(result.getFirst().getUserId()).isEqualTo("2");
     assertThat(result.getFirst().getDisplayName()).isEqualTo("gtgmycatisonfire");
     assertThat(result.getFirst().getStatus()).isEqualTo("BLOCKED");
     assertThat(result.getFirst().isRequester()).isTrue();
@@ -343,52 +341,52 @@ public class FriendshipServiceTest {
 
   @Test
   void testGetFriendshipStatus_ExistingFriendship_ReturnsStatus() {
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.of(friendship));
 
-    String result = friendshipService.getFriendshipStatus(1, 2);
+    String result = friendshipService.getFriendshipStatus("1", "2");
 
     assertThat(result).isEqualTo("PENDING");
   }
 
   @Test
   void testGetFriendshipStatus_NoFriendship_ReturnsNone() {
-    when(friendshipRepository.findFriendshipBetweenUsers(1, 2))
+    when(friendshipRepository.findFriendshipBetweenUsers("1", "2"))
       .thenReturn(Optional.empty());
 
-    String result = friendshipService.getFriendshipStatus(1, 2);
+    String result = friendshipService.getFriendshipStatus("1", "2");
 
     assertThat(result).isEqualTo("NONE");
   }
 
   @Test
   void testFindFriendshipById_NotFound_ThrowsException() {
-    when(friendshipRepository.findById(999)).thenReturn(Optional.empty());
+    when(friendshipRepository.findById("999")).thenReturn(Optional.empty());
 
-    assertThatThrownBy(() -> friendshipService.acceptFriendRequest(2, 999))
+    assertThatThrownBy(() -> friendshipService.acceptFriendRequest("2", "999"))
       .isInstanceOf(FriendshipNotFoundException.class)
       .hasMessage("Friendship not found with ID: 999");
   }
 
   @Test
   void testMapToResponseDto_CurrentUserIsFriend_MapsCorrectly() {
-    when(friendshipRepository.findAcceptedFriendships(2))
-      .thenReturn(Arrays.asList(friendship));
+    when(friendshipRepository.findAcceptedFriendships("2"))
+      .thenReturn(Collections.singletonList(friendship));
 
-    List<FriendshipResponseDTO> result = friendshipService.getFriends(2);
+    List<FriendshipResponseDTO> result = friendshipService.getFriends("2");
 
     assertThat(result).hasSize(1);
-    assertThat(result.getFirst().getUserId()).isEqualTo(1);
+    assertThat(result.getFirst().getUserId()).isEqualTo("1");
     assertThat(result.getFirst().getDisplayName()).isEqualTo("Jordan299");
     assertThat(result.getFirst().isRequester()).isFalse();
   }
 
   @Test
   void testGetFriends_NoFriends_ReturnsEmptyList() {
-    when(friendshipRepository.findAcceptedFriendships(1))
-      .thenReturn(Arrays.asList());
+    when(friendshipRepository.findAcceptedFriendships("1"))
+      .thenReturn(List.of());
 
-    List<FriendshipResponseDTO> result = friendshipService.getFriends(1);
+    List<FriendshipResponseDTO> result = friendshipService.getFriends("1");
 
     assertThat(result).isEmpty();
   }
